# jump-a-jump

./: .gitignore  CMakeLists.txt  README.md
includes/: global.h
includes/frames/: createEmptyFrame.h
includes/frames/gamepage/: createGamepageCompressFrame.h  createGamepageEndFrame.h  createGamepageFallFrames.h  createGamepageHeaderFrame.h  createGamepageJumpFrames.h  createGamepageMoveFrames.h  createGamepageNormalFrame.h
includes/frames/homepage/: createHeaderFrame.h  createHomepageFrame.h
includes/game/: clearInvisibleStages.h  generateNextStage.h  initializeGame.h  judgeJumpOnStage.h  updateChessStateAfterJump.h  updateGameScore.h  updateStateAfterMove.h
includes/input/: readCertainChar.h  readChar.h  sustainedReadCertainChar.h
includes/print/: printFrame.h  printHeaderFrame.h  printMainFrame.h
includes/types/: frame.h  game.h  input.h
includes/utils/: sleep.h  tool.h
src/: main.c
src/frames/: createEmptyFrame.c
src/frames/gamepage/: createGamepageCompressFrame.c  createGamepageEndFrame.c  createGamepageFallFrames.c  createGamepageHeaderFrame.c  createGamepageJumpFrames.c  createGamepageMoveFrames.c  createGamepageNormalFrame.c
src/frames/homepage/: createHomepageFrame.c  createHomepageHeaderFrame.c
src/game/: clearInvisibleStages.c  generateNextStage.c  initializeGame.c  judgeJumpOnStage.c  updateChessStateAfterJump.c  updateGameScore.c  updateStateAfterMove.c
src/input/: readCertainChar.c  readChar.c  sustainedReadCertainChar.c
src/print/: printFrame.c  printHeaderFrame.c  printMainFrame.c
